crates/nash-can/src/snapshots/nash_can__module__tests__import_exposing_not_found_value.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo exposing (nonexistent)\n\nx = 1\n"
---
[
    ImportExposingNotFound {
        region: Region {
            start: Position {
                line: 3,
                column: 22,
            },
            end: Position {
                line: 3,
                column: 33,
            },
        },
        module: ModuleName {
            package: None,
            name: "Foo",
        },
        name: "nonexistent",
        available: [
            "bar",
        ],
    },
]
