crates/nash-can/src/snapshots/nash_can__module__tests__import_open_alias.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo exposing (MyAlias(..))\n\nx = 1\n"
---
[
    ImportOpenAlias {
        region: Region {
            start: Position {
                line: 3,
                column: 22,
            },
            end: Position {
                line: 3,
                column: 29,
            },
        },
        name: "MyAlias",
    },
]
