crates/nash-can/src/snapshots/nash_can__module__tests__infix_right_associativity.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing ((<|))\n\ninfix right 0 (<|) = apL\n"
---
Module {
    name: ModuleName {
        package: None,
        name: "Main",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 23,
                    },
                    end: Position {
                        line: 1,
                        column: 27,
                    },
                },
                value: Binop(
                    "<|",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Empty,
    unions: [],
    aliases: [],
    binops: [
        Located {
            region: Region {
                start: Position {
                    line: 3,
                    column: 1,
                },
                end: Position {
                    line: 4,
                    column: 1,
                },
            },
            value: Binop {
                symbol: "<|",
                associativity: Right,
                precedence: Precedence(
                    0,
                ),
                function: "apL",
            },
        },
    ],
}
