crates/nash-can/src/snapshots/nash_can__module__tests__interface_from_module_empty.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n"
---
Interface {
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [],
    aliases: [],
    unions: [],
    binops: [],
}
