crates/nash-can/src/snapshots/nash_can__module__tests__interface_from_module_open_exports.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype alias Pair a b = (a, b)\n\ntype Maybe a\n    = Just a\n    | Nothing\n"
---
Interface {
    home: ModuleName {
        package: None,
        name: "Main",
    },
    values: [],
    aliases: [
        InterfaceAlias {
            name: "Pair",
            parameters: [
                "a",
                "b",
            ],
            typ: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 23,
                    },
                    end: Position {
                        line: 3,
                        column: 29,
                    },
                },
                value: Tuple {
                    first: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 24,
                            },
                            end: Position {
                                line: 3,
                                column: 25,
                            },
                        },
                        value: Var(
                            "a",
                        ),
                    },
                    second: Located {
                        region: Region {
                            start: Position {
                                line: 3,
                                column: 27,
                            },
                            end: Position {
                                line: 3,
                                column: 28,
                            },
                        },
                        value: Var(
                            "b",
                        ),
                    },
                    rest: [],
                },
            },
            visibility: Public,
        },
    ],
    unions: [
        InterfaceUnion {
            name: "Maybe",
            parameters: [
                "a",
            ],
            ctors: [
                Ctor {
                    name: "Just",
                    index: 0,
                    arity: 1,
                    arguments: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 6,
                                    column: 12,
                                },
                                end: Position {
                                    line: 6,
                                    column: 13,
                                },
                            },
                            value: Var(
                                "a",
                            ),
                        },
                    ],
                },
                Ctor {
                    name: "Nothing",
                    index: 1,
                    arity: 0,
                    arguments: [],
                },
            ],
            alternatives: 2,
            options: Normal,
            visibility: Open,
        },
    ],
    binops: [],
}
